--- a/bonsai/rest-api-mock/Cargo.toml
+++ b/bonsai/rest-api-mock/Cargo.toml
@@ -13,9 +13,11 @@ axum = { version = "0.7", features = ["macros"] }
 bincode = "1.3"
 bonsai-sdk = { workspace = true }
 hex = "0.4"
+risc0-seal-to-json = { path = "../../compact_proof/seal_to_json", optional = true }
 risc0-zkvm = { workspace = true, features = ["client"] }
 serde_json = "1.0"
 thiserror = "1.0"
+tempfile = { version = "3.3", optional = true }
 tokio = { version = "1", features = ["full", "sync"] }
 tower-http = { version = "0.5", features = ["trace"] }
 tracing = "0.1"
@@ -29,4 +31,8 @@ risc0-zkvm-methods = { path = "../../risc0/zkvm/methods", default-features = fal
 cuda = ["risc0-zkvm/cuda"]
 default = []
 metal = ["risc0-zkvm/metal"]
-prove = ["risc0-zkvm/prove"]
+prove = [
+  "dep:tempfile",
+  "dep:risc0-seal-to-json",
+  "risc0-zkvm/prove"
+  ]
