--- a/.github/workflows/bench_pr.yml
+++ b/.github/workflows/bench_pr.yml
@@ -64,31 +64,31 @@ jobs:
         run: |
           echo "${{ steps.criterion-cmp.outputs.markdown }}" > ${{ runner.temp }}/pr-output/${{ matrix.os }}-${{ matrix.feature }}-output.md
 
-      - uses: actions/upload-artifact@v3
-        with:
-          name: 'md-output'
-          path: ${{ runner.temp }}/pr-output/
-          if-no-files-found: error
+      #- uses: actions/upload-artifact@v3
+      #  with:
+      #    name: 'md-output'
+      #    path: ${{ runner.temp }}/pr-output/
+      #    if-no-files-found: error
 
-      - uses: actions/download-artifact@v3
-        # Using v4 might cause complications if we move to GitHub Enterprise Server (GHES)
-        with:
-          path: ${{ runner.temp }}/pr-output/
-          merge-multiple: true
-          #github-token: ${{ secrets.GITHUB_TOKEN }}
+      #- uses: actions/download-artifact@v3
+      #  # Using v4 might cause complications if we move to GitHub Enterprise Server (GHES)
+      #  with:
+      #    path: ${{ runner.temp }}/pr-output/
+      #    merge-multiple: true
+      #    #github-token: ${{ secrets.GITHUB_TOKEN }}
 
       #- name: unzip benchmark markdown files
       #  run: |
       #    mkdir -p ${{ runner.temp }}/pr-output/
       #    unzip -o ${{ runner.temp }}/md-output.zip -d ${{ runner.temp }}/pr-output/
 
-      - name: Merge output files
-        shell: bash
-        run: sed h ${{ runner.temp }}/pr-output/*-output.md > ${{ runner.temp }}/pr-output/merged.md
-        id: download
+      #- name: Merge output files
+      #  shell: bash
+      #  run: sed h ${{ runner.temp }}/pr-output/*-output.md > ${{ runner.temp }}/pr-output/merged.md
+      #  id: download
 
       - name: Display Benchmark Results in CI
-        run: cat merged.md
+        run: cat ${{ runner.temp }}/pr-output/${{ matrix.os }}-${{ matrix.feature }}-output.md
         
       - name: Compare Benchmarks with Threshold
         run: |
