--- a/.github/workflows/bench_pr.yml
+++ b/.github/workflows/bench_pr.yml
@@ -97,7 +97,7 @@ jobs:
           # Checks for criterion comparison output for values that exceed threshold
           while read line; do
             
-            if [[ "$line" == *"-"* ]] && [[ "$line" == *"%"* ]]; then
+            if [[ "$line" == *"-"* ]] && [[ "$line" == *"."* ]]; then
               
               # Stores performance change as variable
               BM_PERF_CHANGE=$(sed 's|.*-\(.*\)%.*|\1|' <<< "$line")
