testing zsh to resolve floating point error

--- a/.github/workflows/bench_pr.yml
+++ b/.github/workflows/bench_pr.yml
@@ -91,6 +91,7 @@ jobs:
         run: cat ${{ runner.temp }}/pr-output/${{ matrix.os }}-${{ matrix.feature }}-output.md
         
       - name: Compare Benchmarks with Threshold
+        shell: zsh
         run: |
           THRESHOLD_PERCENTAGE=1
 
