--- a/.github/workflows/bench_pr.yml
+++ b/.github/workflows/bench_pr.yml
@@ -104,7 +104,7 @@ jobs:
               
               # Compares performance change on each line against threshold, writes line to file if exceeded
               # Variables piped through `bc` to process floating-point number comparisons
-              if [[ "$BM_PERF_CHANGE" -gt "$THRESHOLD_PERCENTAGE" ]]; then
+              if (( $(echo "$BM_PERF_CHANGE > $THRESHOLD_PERCENTAGE" | bc -l) )); then
                   echo -e "\n$line\n" >> thresholds_exceeded.txt
               fi
           
