--- a/bonsai/Cargo.toml
+++ b/bonsai/Cargo.toml
@@ -13,9 +13,9 @@ bonsai-ethereum-contracts = { version = "0.8.0-alpha.1", path = "ethereum" }
 bonsai-ethereum-relay = { version = "0.8.0-alpha.1", default-features = false, path = "ethereum-relay" }
 bonsai-rest-api-mock = { version = "0.8.0-alpha.1", default-features = false, path = "rest-api-mock" }
 bonsai-sdk = { version = "0.8.0-alpha.1", default-features = false, path = "sdk" }
-risc0-build = { version = "0.22.0-alpha.1", default-features = false, path = "../risc0/build" }
-risc0-groth16 = { version = "0.22.0-alpha.1", default-features = false, path = "../risc0/groth16" }
-risc0-zkvm = { version = "0.22.0-alpha.1", default-features = false, path = "../risc0/zkvm" }
+risc0-build = { version = "0.21.0-rc.1", default-features = false, path = "../risc0/build" }
+risc0-groth16 = { version = "0.21.0-rc.1", default-features = false, path = "../risc0/groth16" }
+risc0-zkvm = { version = "0.21.0-rc.1", default-features = false, path = "../risc0/zkvm" }
 
 [profile.bench]
 lto = true
