--- a/risc0/circuit/rv32im/Cargo.toml
+++ b/risc0/circuit/rv32im/Cargo.toml
@@ -19,14 +19,14 @@ tracing = { version = "0.1", default-features = false, features = [
   "attributes",
 ] }
 
-[target.'cfg(not(target_os = "zkvm"))'.dependencies]
+[target.'cfg(not(target_os = "r0-zkvm"))'.dependencies]
 cust = { version = "0.3", optional = true }
 rand = { version = "0.8", optional = true }
 rayon = { version = "1.5", optional = true }
 metal = { version = "0.25", optional = true }
 risc0-circuit-rv32im-sys = { workspace = true, optional = true }
 
-[target.'cfg(target_os = "zkvm")'.dependencies]
+[target.'cfg(target_os = "r0-zkvm")'.dependencies]
 risc0-zkvm-platform = { workspace = true }
 
 [dev-dependencies]
