--- a/risc0/zkvm/Cargo.toml
+++ b/risc0/zkvm/Cargo.toml
@@ -100,6 +100,7 @@ tempfile = "3"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
 
 [features]
+dummy = []
 client = [
   "dep:bincode",
   "dep:bonsai-sdk",
